# Time_it_rigth_FastApi

./: .gitignore  Dockerfile  README.md  Time_It_Right_Postman_Collection.json  docker-entrypoint.sh  env.example  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/application/: __init__.py
app/application/use_cases/: auth_use_cases.py  game_use_cases.py
app/core/: config.py  dependencies.py  security.py
app/domain/entities/: game_session.py  user.py
app/domain/interfaces/: __init__.py  game_session_repository.py  user_repository.py
app/domain/value_objects/: __init__.py  deviation.py  duration.py
app/infrastructure/database/: connection.py  models.py
app/infrastructure/repositories/: game_session_repository.py  user_repository.py
app/infrastructure/services/: __init__.py  leaderboard_notification_service.py  websocket_manager.py
app/presentation/: __init__.py
app/presentation/api/: __init__.py  analytics.py  auth.py  games.py  leaderboard.py  websockets.py
app/presentation/schemas/: auth_schemas.py  common_schemas.py  game_schemas.py
tests/: __init__.py  test_main.py  test_scenarios.py  test_websockets.py
